--- a/components/change-password.html
+++ b/components/change-password.html
@@ -1,10 +1,10 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar" ng-class="changePassword.resultClass">
 
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}" title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -14,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">{{title}}</h1>
+                <h1 class=" font-iceberg font-x-large">{{lang.changePassword | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -28,28 +28,28 @@
             <form id="changePasswordForm" name="changePasswordForm" class="width-300-px">
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
                     <input required type="password" ng-model="changePassword.oldPassword" name="oldPassword"
-                           placeholder="Vecchia password">
+                           placeholder="{{lang.oldPassword}}">
                     <div ng-messages="changePasswordForm.oldPassword.$error || changePasswordForm.$submitted"
                          role="alert">
-                        <div ng-message=" required">Inserisci la vecchia password</div>
+                        <div ng-message=" required">{{lang.insertOldPassword}}</div>
                     </div>
                 </md-input-container>
 
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
                     <input required type="password" ng-model="changePassword.newPassword" name="newPassword"
-                           placeholder="Nuova password">
+                           placeholder="{{lang.newPassword}}">
                     <div ng-messages="changePasswordForm.newPassword.$error || changePasswordForm.$submitted"
                          role="alert">
-                        <div ng-message=" required">inserisci la nuova password</div>
+                        <div ng-message=" required">{{lang.insertNewPassword}}</div>
                     </div>
                 </md-input-container>
 
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
                     <input required type="password" ng-model="changePassword.reNewPassword" name="reNewPassword"
-                           placeholder="Reinserire nuova password">
+                           placeholder="{{lang.reinsertNewPassword}}">
                     <div ng-messages="changePasswordForm.reNewPassword.$error || changePasswordForm.$submitted"
                          role="alert">
-                        <div ng-message=" required">Reinserisci la nuova password</div>
+                        <div ng-message=" required">{{lang.reinsertNewPassword}}</div>
                     </div>
                 </md-input-container>
 
@@ -65,7 +65,7 @@
 
                 <div layout="column" layout-align="center center">
                     <md-button ng-click="sendPassword(changePasswordForm)"
-                               class="md-raised background-darkcyan color-white">CAMBIA PASSWORD
+                               class="md-raised background-darkcyan color-white">{{lang.changePassword}}
                     </md-button>
                 </div>
             </form>
@@ -73,3 +73,4 @@
     </md-content>
     <!--end popup content-->
 </div>
+
