--- a/components/recover-password-code.html
+++ b/components/recover-password-code.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="languageController">
     <div layout="column" class="height-100-vh">
 
         <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
@@ -20,43 +20,43 @@
                         </div>
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
-                            <label for="codeInput" class="font-smal">Codice</label>
+                            <label for="codeInput" class="font-smal">{{lang.code}}</label>
                             <input required type="text" id="codeInput" name="codeInput" ng-model="code" title="">
                             <div ng-messages="recoverPassCodeForm.codeInput.$error || recoverPassCodeForm.$submitted">
-                                <div ng-message="required">Inserire il codice ricevuto via email</div>
+                                <div ng-message="required">{{lang.insertCode}}</div>
                             </div>
                         </md-input-container>
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
-                            <label for="usernameInput" class="font-smal">Username</label>
+                            <label for="usernameInput" class="font-smal">{{lang.username}}</label>
                             <input required type="text" id="usernameInput" name="usernameInput" ng-model="username"
                                    title="">
                             <div ng-messages="recoverPassCodeForm.usernameInput.$error || recoverPassCodeForm.$submitted">
-                                <div ng-message="required">Inserire l'username</div>
+                                <div ng-message="required">{{lang.insertUsername}}</div>
                             </div>
                         </md-input-container>
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
-                            <label for="passwordInput" class="font-smal">Password</label>
+                            <label for="passwordInput" class="font-smal">{{lang.password}}</label>
                             <input required type="password" id="passwordInput" name="passwordInput" ng-model="password"
                                    title="">
                             <div ng-messages="recoverPassCodeForm.passwordInput.$error || recoverPassCodeForm.$submitted">
-                                <div ng-message="required">Inserire password</div>
+                                <div ng-message="required">{{lang.insertPassword}}</div>
                             </div>
                         </md-input-container>
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
-                            <label for="confirmInput" class="font-smal">Conferma password</label>
+                            <label for="confirmInput" class="font-smal">{{lang.confirmPassword}}</label>
                             <input required type="password" id="confirmInput" name="confirmInput" ng-model="rePassword"
                                    title="">
                             <div ng-messages="recoverPassCodeForm.confirmInput.$error || recoverPassCodeForm.$submitted">
-                                <div ng-message="required">Reinserire la password</div>
+                                <div ng-message="required">{{lang.reinsertPassword}}</div>
                             </div>
                         </md-input-container>
 
                         <div class="background-transparent-white text-center color-red font-smal
                                     margint-top-5-px margin-bottom-10-px padding-10-px"
-                             ng-show="errorHandeling.passwordNotMatch">Le password non coincidono
+                             ng-show="errorHandeling.passwordNotMatch">{{lang.passwordDontMatch}}
                         </div>
 
                         <div class="background-transparent-white text-center color-red font-smal
@@ -66,10 +66,10 @@
 
                         <div class="background-transparent-white text-center color-red font-smal
                                 margint-top-5-px margin-bottom-10-px padding-10-px"
-                             ng-show="errorHandeling.noConnection">Impossibile communicare con il server
+                             ng-show="errorHandeling.noConnection">{{lang.noServerCommunication}}
                         </div>
                         <md-button id="recoverPassCodeButton" ng-click="resetPassword(recoverPassCodeForm)"
-                                   class="md-raised margin-bottom-10">Reimposta password
+                                   class="md-raised margin-bottom-10">{{lang.resetPassword | uppercase}}
                         </md-button>
                     </div>
                 </form>
