--- a/components/tag-info.html
+++ b/components/tag-info.html
@@ -1,9 +1,10 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar" ng-class="isTagInAlarm">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}"
+                     title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -24,19 +25,19 @@
         <div layout="column" layout-align="center center">
             <md-list>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">WeTAG:</p>
+                    <p class="float-left">{{lang.tag}}:</p>
                     <p class="float-right text-right">{{tag.id}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Piano:</p>
+                    <p class="float-left">{{lang.floor}}:</p>
                     <p class="float-right text-right">{{tag.floor_name}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Ancora:</p>
+                    <p class="float-left">{{lang.anchor}}:</p>
                     <p class="float-right text-right">{{tag.anchor_name}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Livello batteria:</p>
+                    <p class="float-left">{{lang.batteryLevel}}:</p>
                     <p class="float-right text-right">{{tag.battery_status === 0 ? '100' : '0'}}</p>
                 </md-list-item>
             </md-list>
