--- a/components/anchor-info.html
+++ b/components/anchor-info.html
@@ -1,9 +1,10 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar" ng-class="isAnchorOnline">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}"
+                     title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -24,23 +25,23 @@
         <div layout="column" layout-align="center center">
             <md-list>
                 <md-list-item class="width-300-px">
-                    <p class="float-left margin-right-50-px">Ip:</p>
+                    <p class="float-left margin-right-50-px">{{lang.ip}}:</p>
                     <p class="float-right text-right">{{anchor.ip}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Edificio:</p>
+                    <p class="float-left">{{lang.buildingName}}:</p>
                     <p class="float-right text-right">{{anchor.location_name}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Mac:</p>
+                    <p class="float-left">{{lang.mac}}:</p>
                     <p class="float-right text-right">{{anchor.mac}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Tipologia:</p>
+                    <p class="float-left">{{lang.type}}:</p>
                     <p class="float-right text-right">{{anchor.type}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Soglie RSSI:</p>
+                    <p class="float-left">{{lang.rssi}}:</p>
                     <p class="float-right text-right">{{anchor.rssi}}</p>
                 </md-list-item>
 
