--- a/components/canvas.html
+++ b/components/canvas.html
@@ -1,18 +1,18 @@
-<div>
+<div ng-controller="languageController">
     <div layout="column" class="height-100-vh">
         <div layout="column" class="top-corner background-transparent-white">
             <img ng-show="canvasCtrl.showAlarmsIcon" ng-click="showAlarms()" class="margin-bottom-3"
-                 src="img/icons/alarm-icon.png" alt="Allarmi attivi" title="Allarmi attivi">
+                 src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
             <img ng-show="canvasCtrl.showOfflineTagsIcon" ng-click="showOfflineTagsIndoor()" class="margin-bottom-5-px"
-                 src="img/icons/offline_tags_alert_64.png" alt="Tags offline" title="Tags offline">
+                 src="img/icons/offline_tags_alert_64.png" alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
             <img ng-show="canvasCtrl.showOfflineAnchorsIcon" ng-click="showOfflineAnchorsIndoor()"
-                 src="img/icons/offline_anchors_alert_64.png" alt="Ancore offline"
-                 title="Ancore offline">
+                 src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
+                 title="{{lang.offlineAnchors}}">
         </div>
 
         <div class="bottom-corner">
             <img ng-click="showEmergencyZone()" src="img/icons/evacuation-alarm.png"
-                 alt="Stato evacuazione" title="Stato evacuazione"><br>
+                 alt="lang.evacuationState" title="{{lang.evacuationState}}"><br>
         </div>
 
         <!--draw button-->
@@ -23,7 +23,7 @@
                 <md-fab-trigger>
                     <md-button aria-label="menu" class="md-fab background-transparent-white">
                         <img ng-src="img/icons/{{canvasCtrl.drawingImage}}" class="edit-image"
-                             alt="Modifica impostazioni pagina" title="Modifica impostazioni pagina">
+                             alt="{{lang.modifyPageSettings}}" title="{{lang.modifyPageSettings}}">
                     </md-button>
                 </md-fab-trigger>
 
@@ -32,65 +32,69 @@
                                class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                ng-click="canvasCtrl.speedDialClicked('vertical')">
                         <img src="img/icons/vertical-line.png" class="width-100 height-100"
-                             alt="Disegna riga verticale" title="Disegna riga verticale">
+                             alt="{{lang.drawVerticalLine}}" title="{{lang.drawVerticalLine}}">
                     </md-button>
 
                     <md-button aria-label="Disegna riga orizontale"
                                class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                ng-click="canvasCtrl.speedDialClicked('horizontal')">
                         <img src="img/icons/horizontal-line.png" class="width-100 height-100"
-                             alt="Disegna riga orizontale" title="Disegna riga orizontale">
+                             alt="{{lang.drawHorizontalLine}}" title="{{lang.drawHorizontalLine}}">
                     </md-button>
 
                     <md-button aria-label="Disegna riga inclinata"
                                class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                ng-click="canvasCtrl.speedDialClicked('inclined')">
                         <img src="img/icons/inclined-line.png" class="width-100 height-100"
-                             alt="Disegna riga inclinata" title="Disegna riga inclinata">
+                             alt="{{lang.drawInclinedLine}}" title="{{lang.drawInclinedLine}}">
                     </md-button>
 
-                    <md-button aria-label="Cancella riga"
+                    <md-button aria-label="Cancella linea"
                                class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                ng-click="canvasCtrl.speedDialClicked('delete')">
                         <img src="img/icons/erase_24.png" class="width-100 height-100"
-                             alt="Cancella riga" title="Cancella riga">
+                             alt="{{lang.deleteLine}}" title="{{lang.deleteLine}}">
                     </md-button>
                     <div layout="column" class="width-20">
-                        <md-button aria-label="Riposiziona ancora"
+                        <md-button aria-label="{{lang.changeAnchorPosition}}"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('drop_anchor')">
                             <img src="img/icons/tags/anchor_online_24.png" class="width-100 height-100"
-                                 alt="Riposiziona ancora" title="Riposiziona ancora">
+                                 alt="{{lang.changeAnchorPosition}}" title="{{lang.changeAnchorPosition}}">
                         </md-button>
                     </div>
                     <div layout="column" class="width-20">
-                        <md-button aria-label="Disegna zona"
+                        <md-button aria-label="{{lang.drawZone}}"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('draw_zone')">
                             <img src="img/icons/draw-zone.png" class="width-100 height-100"
-                                 alt="Disegna zona" title="Disegna zona">
+                                 alt="{{lang.drawZone}}" title="{{lang.drawZone}}">
                         </md-button>
                     </div>
                     <div layout="column" class="width-20">
-                        <md-button aria-label="Cancella zona"
+                        <md-button aria-label="{{lang.deleteZone}}"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('delete_zone')">
                             <img src="img/icons/draw-zone.png" class="width-100 height-100"
-                                 alt="Cancella zona" title="Cancella zona">
+                                 alt="{{lang.deleteZone}}" title="{{lang.deleteZone}}">
                         </md-button>
                     </div>
                     <div layout="column" class="width-20">
-                        <md-button aria-label="Modifica zona"
+                        <md-button aria-label="{{lang.modifyZone}}"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('modify_zone')">
                             <img src="img/icons/draw-zone.png" class="width-100 height-100"
-                                 alt="Modifica zona" title="Modifica zona">
+                                 alt="{{lang.modifyZone}}" title="{{lang.modifyZone}}">
                         </md-button>
                     </div>
                 </md-fab-actions>
             </md-fab-speed-dial>
-            <md-button ng-click="canvasCtrl.saveDrawing()" class="md-warn md-raised float-right">SALVA
-
+            <md-button ng-click="canvasCtrl.saveDrawing()" class="md-warn md-raised float-right">{{lang.save |
+                uppercase}}
+            </md-button>
+            <md-button ng-click="canvasCtrl.cancelDrawing()" class="md-warn md-raised float-right">{{lang.cancel |
+                uppercase}}
+            </md-button>
         </div>
         <!--end draw buttoon-->
 
@@ -115,12 +119,12 @@
         <div ng-controller="menuController">
             <div ng-show="!canvasCtrl.switch.showDrawing" id="open-menu-button" ng-click="toggleLeft()"
                  class="margin-left--8-px cursor-pointer outline-none">
-                <img id="open-menu-icon" src="img/icons/menu-arrow.png" alt="Menu" title="Menu">
+                <img id="open-menu-icon" src="img/icons/menu-arrow.png" alt="{{lang.menu}}" title="{{lang.menu}}">
             </div>
 
             <div ng-show="!canvasCtrl.switch.showDrawing" id="home-button" ng-click="canvasCtrl.goHome()"
                  class="margin-left--8-px cursor-pointer outline-none">
-                <img id="home-button-icon" src="img/icons/home_16.png" alt="Menu" title="Menu">
+                <img id="home-button-icon" src="img/icons/home_16.png" alt="{{lang.home}}" title="{{lang.home}}">
             </div>
 
             <section layout="row">
@@ -131,8 +135,8 @@
                     <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
                         <h1 class="md-toolbar-tools color-black">Menu</h1>
                         <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                            <img src="img/icons/menu/close-menu.png" alt="Chiudi menu"
-                                 title="Chiudi menu">
+                            <img src="img/icons/menu/close-menu.png" alt="{{lang.closeButton}}"
+                                 title="{{lang.closeButton}}">
                         </div>
                     </md-toolbar>
 
@@ -145,30 +149,31 @@
 
                         <div layout="column" id="menu-container">
                             <md-list ng-controller="menuController">
-                                <md-list-item ng-click="registry()"><p>Gestione WeTag</p><img
+                                <md-list-item ng-click="registry('canvas')"><p>{{lang.weTagTable | uppercase}}</p><img
                                         src="img/icons/menu/anagrafica-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="showAnchorsTable()"><p>Gestione Ancore</p><img
+                                <md-list-item ng-click="showAnchorsTable()"><p>{{lang.anchorsTable | uppercase}}</p><img
                                         src="img/icons/menu/anchor-online-icon.png"
                                         class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click="floorUpdate()"><p>Gestione piani</p><img
+                                <md-list-item ng-click="floorUpdate()"><p>{{lang.floorTable | uppercase}}</p><img
                                         src="img/icons/menu/floor-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="zone()"><p>Gestione zone</p><img
+                                <md-list-item ng-click="zone()"><p>{{lang.zoneTable | uppercase}}</p><img
                                         src="img/icons/menu/floor-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="viewHistory()"><p>Storico</p><img
+                                <md-list-item ng-click="viewHistory()"><p>{{lang.history | uppercase}}</p><img
                                         src="img/icons/menu/history_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="quickActions()"><p>Comandi rapidi</p><img
+                                <md-list-item ng-click="quickActions()"><p>{{lang.quickActions | uppercase}}</p><img
                                         src="img/icons/menu/quick_action_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="changePassword()"><p>Cambia password</p><img
+                                <md-list-item ng-click="changePassword()"><p>{{lang.changePassword | uppercase}}</p><img
                                         src="img/icons/menu/password_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="logout()"><p class="color-red">Logout</p><img
-                                        src="img/icons/menu/logout_icon_16.png" class="menu-list-icon"
-                                        alt=""></md-list-item>
+                                <md-list-item ng-click="logout()"><p class="color-red">{{lang.logout | uppercase}}</p>
+                                    <img
+                                            src="img/icons/menu/logout_icon_16.png" class="menu-list-icon"
+                                            alt=""></md-list-item>
                             </md-list>
 
                             <div id="search-tag-container" layout="column" class="padding-10-px"
@@ -176,7 +181,7 @@
 
                                 <md-input-container class="margin-bottom-0 margin-top-10 width-100">
 
-                                    <label>Cerca WeTag</label>
+                                    <label>{{lang.searchWetag}}</label>
 
                                     <md-select ng-model="selectedTag">
                                         <md-option ng-repeat="tag in menuTags" ng-value="tag.name">
@@ -191,7 +196,7 @@
 
                                 <md-input-container class="margin-bottom-0 margin-top-10">
 
-                                    <label>Selezione piano</label>
+                                    <label>{{lang.selectFloor}}</label>
 
                                     <md-select ng-model="canvasCtrl.floorData.defaultFloorName">
                                         <md-option ng-repeat="floor in canvasCtrl.floors" ng-value="floor.name">
@@ -204,29 +209,31 @@
                             <div id="change-grid-container" layout="column" class="padding-10-px">
 
                                 <div flex="100" layout layout-align="center center">
-                                    <md-subheader class="padding-0 width-100 zindex-0">Spaziatura griglia: <b>{{canvasCtrl.floorData.gridSpacing}}</b>
+                                    <md-subheader class="padding-0 width-100 zindex-0">{{lang.gridSpacing}}: <b>{{canvasCtrl.floorData.gridSpacing}}</b>
                                         <md-subheader>
                                 </div>
 
                                 <md-slider-container flex="100">
                                     <md-slider md-discrete ng-model="canvasCtrl.floorData.gridSpacing" min="1" max="50"
-                                               step="1" aria-label="Selezionare la densita' della griglia"
+                                               step="1" aria-label="{{lang.selectGridSpacing}}"
+                                               title="{{lang.selectGridSpacing}}"
                                                class="md-primary"></md-slider>
                                 </md-slider-container>
                             </div>
 
-                            <div layout="row" layout-align="center center" class="width-300-px" >
+                            <div layout="row" layout-align="center center" class="width-300-px">
 
                                 <div id="drawing-on-off-container" layout="column" class="padding-10-px width-50"
                                      layout-align="center center">
                                     <div flex="100" layout layout-align="center center">
                                         <md-subheader class="padding-0" ng-show="canvasCtrl.switch.showDrawing">
-                                            Disegna: <b class="color-green">ON</b></md-subheader>
+                                            {{lang.draw}}: <b class="color-green">ON</b></md-subheader>
                                         <md-subheader class="padding-0" ng-show="!canvasCtrl.switch.showDrawing">
-                                            Disegna: <b class="color-red">OFF</b></md-subheader>
+                                            {{lang.draw}}: <b class="color-red">OFF</b></md-subheader>
                                     </div>
                                     <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged"
-                                               md-no-ink aria-label="Mostra/nascondi strumenti disegno"
+                                               md-no-ink aria-label="{{lang.showHideDraw}}"
+                                               title="{{lang.showHideDraw}}"
                                                ng-model="canvasCtrl.switch.showDrawing">
                                     </md-switch>
                                 </div>
@@ -240,7 +247,8 @@
                                     </div>
 
                                     <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged"
-                                               md-no-ink aria-label="Passsa in modalita' fullscreen"
+                                               md-no-ink aria-label="{{lang.showHideFullscreen}}"
+                                               title="{{lang.showHideFullscreen}}"
                                                ng-model="canvasCtrl.switch.showFullscreen">
                                     </md-switch>
                                 </div>
