--- a/components/home.html
+++ b/components/home.html
@@ -1,17 +1,16 @@
-<div>
-
+<div ng-controller="languageController">
     <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
         <!--map container-->
         <div id="map-div">
             <div layout="column" class="top-corner background-transparent-white">
                 <img ng-show="homeCtrl.showAlarmsIcon" ng-click="homeCtrl.showAlarmsHome()" class="margin-bottom-3"
-                     src="img/icons/alarm-icon.png" alt="Alarmi attivi" title="Alarmi attivi">
+                     src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
                 <img ng-show="homeCtrl.showOfflineTagsIcon" ng-click="homeCtrl.showOfflineTagsHome()"
                      class="margin-bottom-5-px" src="img/icons/offline_tags_alert_64.png"
-                     alt="Tags offline" title="Tags offline">
+                     alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
                 <img ng-show="homeCtrl.showOfflineAnchorsIcon" ng-click="homeCtrl.showOfflineAnchorsHome()"
-                     src="img/icons/offline_anchors_alert_64.png" alt="Ancore offline"
-                     title="Ancore offline">
+                     src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
+                     title="{{lang.offlineAnchors}}">
             </div>
             <ng-map id="main-map" ng-init="homeCtrl.markerClicked()" center="{{mapConfiguration.center}}"
                     zoom="{{mapConfiguration.zoom}}" mape-type-id="{{mapConfiguration.map_type}}" class="height-100-vh">
@@ -43,7 +42,7 @@
                     <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
                         <h1 class="md-toolbar-tools color-black">Menu</h1>
                         <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                            <img src="img/icons/menu/close-menu.png" alt="Close" title="Close">
+                            <img src="img/icons/menu/close-menu.png" alt="{{lang.closeButton}}" title="{{lang.closeButton}}">
                         </div>
                     </md-toolbar>
 
@@ -57,28 +56,28 @@
 
                         <div layout="column" id="menu-container">
                             <md-list>
-                                <md-list-item ng-show="homeCtrl.isAdmin || homeCtrl.isUserManager" ng-click="openLocations()"><p>Gestione siti
+                                <md-list-item ng-show="homeCtrl.isAdmin || homeCtrl.isUserManager" ng-click="openLocations()"><p>{{lang.sitesTable | uppercase}}
                                 </p><img src="img/icons/menu/add-location.png"
                                          class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-show="homeCtrl.isUserManager" ng-click="openUserManager()"><p>Gestione utenti
+                                <md-list-item ng-show="homeCtrl.isUserManager" ng-click="openUserManager()"><p>{{lang.userManager | uppercase}}
                                 </p><img src="img/icons/menu/user-manager-icon.png"
                                          class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-show="homeCtrl.isAdmin" ng-click="openSuperuserManager()"><p>Gestione utenti intermedi
+                                <md-list-item ng-show="homeCtrl.isAdmin" ng-click="openSuperuserManager()"><p>{{lang.userManager | uppercase}}
                                 </p><img src="img/icons/menu/user-manager-icon.png"
                                          class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click="registry()"><p>Gestione WeTag</p><img
+                                <md-list-item ng-click="registry('home')"><p>{{lang.weTagTable | uppercase}}</p><img
                                         src="img/icons/menu/anagrafica-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="viewHistory()"><p>Storico</p><img
+                                <md-list-item ng-click="viewHistory()"><p>{{lang.history | uppercase}}</p><img
                                         src="img/icons/menu/history_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="quickActions()"><p>Comandi rapidi</p><img
+                                <md-list-item ng-click="quickActions()"><p>{{lang.quickActions | uppercase}}</p><img
                                         src="img/icons/menu/quick_action_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="changePassword()"><p>Cambia password</p><img
+                                <md-list-item ng-click="changePassword()"><p>{{lang.changePassword | uppercase}}</p><img
                                         src="img/icons/menu/password_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="logout()"><p class="color-red">Logout</p><img
+                                <md-list-item ng-click="logout()"><p class="color-red">{{lang.logout | uppercase}}</p><img
                                         src="img/icons/menu/logout_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
                             </md-list>
@@ -87,7 +86,7 @@
                                  layout-align="center center">
 
                                 <md-input-container class="margin-bottom-0 margin-top-10">
-                                    <label>Cerca WeTag</label>
+                                    <label>{{lang.searchWetag}}</label>
                                     <md-select ng-model="selectedTag">
 
                                         <md-option ng-repeat="tag in menuTags" ng-value="tag.name">
@@ -118,12 +117,15 @@
                                      layout-align="center center">
 
                                     <div flex="100" layout layout-align="center center">
-                                        <md-subheader class="padding-0">Fullscreen: <b class="color-red">OFF</b>
+                                        <md-subheader class="padding-0" ng-show="switch.mapFullscreen">Fullscreen:
+                                            <b class="color-green">ON</b></md-subheader>
+                                        <md-subheader class="padding-0"ng-show="!switch.mapFullscreen">Fullscreen:
+                                            <b class="color-red">OFF</b>
                                         </md-subheader>
                                     </div>
 
                                     <md-switch class="md-primary margin-none margin-top-10-px"
-                                               md-no-ink aria-label="Passsa in modalita' fullscreen"
+                                               md-no-ink aria-label="{{lang.showHideFullscreen}}" title="{{lang.showHideFullscreen}}"
                                                ng-model="switch.mapFullscreen">
                                     </md-switch>
                                 </div>
