--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -1,83 +1,80 @@
-<div>
-    <!--<div id="home-button" class="margin-left&#45;&#45;8-px">-->
-    <!--<md-button ng-click="outdoorCtrl.goHome()" class="background-darkcyan md-raised color-white">HOME</md-button>-->
-    <!--</div>-->
-    <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
-        <div layout="column" class="top-corner">
-            <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="margin-bottom-3"
-                 src="img/icons/alarm-icon.png" alt="Alarmi attivi" title="Alarmi attivi">
-            <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
-                 class="margin-bottom-5-px" src="img/icons/offline_tags_alert_64.png"
-                 alt="Tags offline" title="Tags offline">
-            <img ng-show="outdoorCtrl.showOfflineAnchorsIcon" ng-click="outdoorCtrl.showOfflineAnchors()"
-                 src="img/icons/offline_anchors_alert_64.png" alt="Ancore offline"
-                 title="Ancore offline">
-        </div>
-        <!--map container-->
-        <div id="map-div">
-            <ng-map id="outdoor-map" center="{{outdoorCtrl.mapConfiguration.center}}"
-                    zoom="{{outdoorCtrl.mapConfiguration.zoom}}"
-                    mape-type-id="{{outdoorCtrl.mapConfiguration.map_type}}" class="height-100-vh">
+<div ng-controller="languageController">
+<div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
+    <div layout="column" class="top-corner">
+        <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="margin-bottom-3"
+             src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
+        <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
+             class="margin-bottom-5-px" src="img/icons/offline_tags_alert_64.png"
+             alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
+        <img ng-show="outdoorCtrl.showOfflineAnchorsIcon" ng-click="outdoorCtrl.showOfflineAnchors()"
+             src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
+             title="{{lang.offlineAnchors}}">
+    </div>
+    <!--map container-->
+    <div id="map-div">
+        <ng-map id="outdoor-map" center="{{outdoorCtrl.mapConfiguration.center}}"
+                zoom="{{outdoorCtrl.mapConfiguration.zoom}}"
+                mape-type-id="{{outdoorCtrl.mapConfiguration.map_type}}" class="height-100-vh">
 
-                <custom-marker ng-repeat="marker in outdoorCtrl.positions"
-                               on-click="outdoorCtrl.markerClicked()"
-                               id="custom-marker-{{$index}}"
-                               position="{{marker.position}}">
-                    <div>
-                        <img ng-src="img/markers-images/{{marker.icon}}" alt="{{marker.name}}"
-                             title="{{marker.name}}">
+            <custom-marker ng-repeat="marker in outdoorCtrl.positions"
+                           on-click="outdoorCtrl.markerClicked()"
+                           id="custom-marker-{{$index}}"
+                           position="{{marker.position}}">
+                <div>
+                    <img ng-src="img/markers-images/{{marker.icon}}" alt="{{marker.name}}"
+                         title="{{marker.name}}">
+                </div>
+            </custom-marker>
+        </ng-map>
+    </div>
+    <!--end map container-->
+
+    <!--menu container-->
+    <div flex="100" ng-controller="menuController">
+
+        <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--8-px cursor-pointer outline-none">
+            <img id="open-menu-icon" src="img/icons/menu-arrow.png" alt="">
+        </div>
+
+        <div ng-show="!canvasCtrl.switch.showDrawing" id="home-button" ng-click="outdoorCtrl.goHome()"
+             class="margin-left--8-px cursor-pointer outline-none">
+            <img id="home-button-icon" src="img/icons/home_16.png" alt="Menu" title="Menu">
+        </div>
+
+        <section layout="row" flex>
+
+            <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-whiteframe="4">
+
+                <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
+                    <h1 class="md-toolbar-tools color-black">Menu</h1>
+                    <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
+                        <img src="img/icons/menu/close-menu.png" alt="{{lang.closeButton}}" title="{{lang.closeButton}}">
                     </div>
-                </custom-marker>
-            </ng-map>
-        </div>
-        <!--end map container-->
+                </md-toolbar>
 
-        <!--menu container-->
-        <div flex="100" ng-controller="menuController">
+                <md-content layout-margin class="margin-top-10">
 
-            <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--8-px cursor-pointer outline-none">
-                <img id="open-menu-icon" src="img/icons/menu-arrow.png" alt="">
-            </div>
-
-            <div ng-show="!canvasCtrl.switch.showDrawing" id="home-button" ng-click="outdoorCtrl.goHome()"
-                 class="margin-left--8-px cursor-pointer outline-none">
-                <img id="home-button-icon" src="img/icons/home_16.png" alt="Menu" title="Menu">
-            </div>
-
-            <section layout="row" flex>
-
-                <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-whiteframe="4">
-
-                    <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
-                        <h1 class="md-toolbar-tools color-black">Menu</h1>
-                        <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                            <img src="img/icons/menu/close-menu.png" alt="Close" title="Close">
-                        </div>
-                    </md-toolbar>
-
-                    <md-content layout-margin class="margin-top-10">
-
-                        <div layout="column" layout-align="center center">
-                            <img src="img/icons/login-icon.png" class="home-menu-logo" alt="Smart Track"
-                                 title="Smart Track">
-                            <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
-                        </div>
+                    <div layout="column" layout-align="center center">
+                        <img src="img/icons/login-icon.png" class="home-menu-logo" alt="Smart Track"
+                             title="Smart Track">
+                        <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
+                    </div>
 
                         <div layout="column" id="menu-container">
                             <md-list ng-controller="menuController">
-                                <md-list-item ng-click="registry()"><p>Tabella WeTag</p><img
+                                <md-list-item ng-click="registry()"><p>{{lang.weTagTable}}</p><img
                                         src="img/icons/menu/anagrafica-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="viewHistory()"><p>Storico</p><img
+                                <md-list-item ng-click="viewHistory()"><p>{{lang.history}}</p><img
                                         src="img/icons/menu/history_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="quickActions()"><p>Comandi rapidi</p><img
+                                <md-list-item ng-click="quickActions()"><p>{{lang.quickActions}}</p><img
                                         src="img/icons/menu/quick_action_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="changePassword()"><p>Cambia password</p><img
+                                <md-list-item ng-click="changePassword()"><p>{{lang.changePassword}}</p><img
                                         src="img/icons/menu/password_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="logout()"><p class="color-red">Logout</p><img
+                                <md-list-item ng-click="logout()"><p class="color-red">{{lang.logout}}</p><img
                                         src="img/icons/menu/logout_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
                             </md-list>
@@ -86,7 +83,7 @@
                                  layout-align="center center">
 
                                 <md-input-container class="margin-bottom-0 margin-top-10">
-                                    <label>Cerca WeTag</label>
+                                    <label>{{lang.searchWetag}}</label>
                                     <md-select ng-model="selectedTag">
 
                                         <md-option ng-repeat="tag in menuTags" ng-value="tag.name">
@@ -100,7 +97,7 @@
                                  class="padding-10-px width-50 width-100" layout-align="center center">
 
                                 <div flex="100" layout layout-align="center center">
-                                    <md-subheader class="padding-0">Fullscreen: <b class="color-red">OFF</b>
+                                    <md-subheader class="padding-0">{{lang.fullscreen}}: <b class="color-red">OFF</b>
                                     </md-subheader>
                                 </div>
 
