--- a/components/search-tag-outside.html
+++ b/components/search-tag-outside.html
@@ -1,9 +1,10 @@
-<div>
+<div aria-label="" ng-controller="languageController">
     <!--popup header-->
-    <md-toolbar id="popup-toolbar" ng-class="isTagOutOfLocation">
+    <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" aria-label="Close" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}"
+                     title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -18,7 +19,7 @@
         </div>
     </md-toolbar>
 </div>
-    <!--end popup header-->
+<!--end popup header-->
 
 <md-content>
     <!--canvas container-->
