--- a/components/select_drop_anchor.html
+++ b/components/select_drop_anchor.html
@@ -1,9 +1,10 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar" ng-class="insertTag.resultClass">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}"
+                     title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -13,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">SELEZIONA ANCORA</h1>
+                <h1 class=" font-iceberg font-x-large">{{lang.selectAnchor | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -23,9 +24,9 @@
     <md-content class="popup-padding">
         <div layout="column" layout-align="center center">
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
-                <label>Seleziona ancora</label>
-                <md-select ng-model="selectedAnchor">
-                    <md-option><em>Nessuno</em></md-option>
+                <label>{{lang.selectAnchor}}</label>
+                <md-select ng-model="dropAnchor.selectedAnchor">
+                    <md-option><em>{{lang.nothing}}</em></md-option>
                     <md-option ng-repeat="anchor in anchors track by $index" ng-value="anchor.name">
                         {{anchor.name}}
                     </md-option>
