--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -1,9 +1,10 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}"
+                     title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -23,7 +24,7 @@
 <!--popup content-->
 <md-content class="popup-padding">
 
-    <div layout="column" layout-align="center center">
+    <div layout="column" layout-align="center center" ng-controller="languageController">
 
         <md-table-container>
 
@@ -33,8 +34,9 @@
                 <thead md-head md-order="query.order">
                 <tr md-row>
                     <th md-column></th>
-                    <th md-column md-order-by="name"><span class="color-darkcyan">NOME</span></th>
-                    <th md-column md-order-by="type_name"><span class="color-darkcyan">TIPO TAG</span></th>
+                    <th md-column md-order-by="name"><span class="color-darkcyan">{{lang.name | uppercase}}</span></th>
+                    <th md-column md-order-by="type_name"><span class="color-darkcyan">{{lang.type | uppercase}}</span>
+                    </th>
                     <th md-column></th>
                 </tr>
                 </thead>
@@ -43,28 +45,33 @@
                 <tr md-row md-select="tag" md-on-select="logItem" md-auto-select="true"
                     ng-repeat="tag in tags | orderBy: query.order | limitTo: query.limit: (query.page -1 ) * query.limit">
                     <td md-cell><img
-                            ng-src="{{tag.is_exit ? 'img/icons/tags/offline_tag_24.png' : 'img/icons/tags/online_tag_24.png'}}"
-                            alt="Stato tag" title="Stato tag"></td>
+                            ng-src="{{!tagsContainTag(tagsOnline, tag) ? 'img/icons/tags/offline_tag_24.png' : 'img/icons/tags/online_tag_24.png'}}"
+                            alt="{{lang.tagState}}" title="{{lang.tagState}}"></td>
                     <td md-cell ng-click="editCell($event, tag, 'name')" ng-class="{'md-placeholder': !tag.name}">
-                        {{tag.name || 'Inserire nome'}}
+                        {{tag.name || lang.insertName}}
                     </td>
                     <td md-cell
-                        ng-class="{'md-placeholder': !tag.type_name}">{{tag.type_name || 'Inserire tipo'}}
+                        ng-class="{'md-placeholder': !tag.type_name}">{{tag.type_name || lang.insertType}}
                     </td>
-                    <td md-cell>
-                        <md-button ng-click="tagMacs(tag)" class="md-raised background-darkcyan color-white">GESTIONE
-                            MACS</md-button>
+                    <td md-cell ng-show="isAdmin || isUserManager">
+                        <md-button ng-click="tagMacs(tag)" class="md-raised background-darkcyan color-white">
+                            {{lang.macsManaging | uppercase}}
+                        </md-button>
                     </td>
-                    <td md-cell ng-click="deleteRow(tag)"><img src="img/icons/delete_trash_24.png" alt="Cancella tag" title="Cancella tag"></td>
+                    <td md-cell ng-show="isAdmin || isUserManager" ng-click="deleteRow(tag)"><img src="img/icons/delete_trash_24.png"
+                                                               alt="{{lang.deleteTag}}" title="{{lang.deleteTag}}"></td>
+                </tr>
+                <tr md-row ng-show="tableEmpty">
+                    <td md-cell colspan="8" class="text-center color-red">{{lang.noResultFound}}</td>
                 </tr>
                 </tbody>
             </table>
         </md-table-container>
 
-        <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
+        <md-input-container ng-show="isAdmin || isUserManager" md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
-                     ng-click="addNewRow()" alt="Aggiungi tag" title="Aggiungi tag">
+                     ng-click="addNewRow()" alt="{{lang.addTag}}" title="{{lang.addTag}}">
             </div>
         </md-input-container>
 
