--- a/components/zone-table.html
+++ b/components/zone-table.html
@@ -1,9 +1,9 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}g" alt="{{lang.closeButton}}" title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -13,7 +13,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">ZONE</h1>
+                <h1 class=" font-iceberg font-x-large">{{lang.zone | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -23,7 +23,7 @@
 <!--popup content-->
 <md-content class="popup-padding">
 
-    <div layout="column" layout-align="center center">
+    <div layout="column" layout-align="center center" ng-controller="languageController">
 
         <md-table-container>
 
@@ -32,12 +32,12 @@
 
                 <thead md-head md-order="query.order">
                 <tr md-row>
-                    <th md-column md-order-by="name"><span class="color-darkcyan">NOME</span></th>
-                    <th md-column md-order-by="x_left"><span class="color-darkcyan">X LEFT</span></th>
-                    <th md-column md-order-by="x_right"><span class="color-darkcyan">X RIGHT</span></th>
-                    <th md-column md-order-by="y_up"><span class="color-darkcyan">Y UP</span></th>
-                    <th md-column md-order-by="y_down"><span class="color-darkcyan">Y DOWN</span></th>
-                    <th md-column md-order-by="y_down"><span class="color-darkcyan">COLOR</span></th>
+                    <th md-column md-order-by="name"><span class="color-darkcyan">{{lang.name}}</span></th>
+                    <th md-column md-order-by="x_left"><span class="color-darkcyan">{{lang.xLeft}}</span></th>
+                    <th md-column md-order-by="x_right"><span class="color-darkcyan">{{lang.xRight}}T</span></th>
+                    <th md-column md-order-by="y_up"><span class="color-darkcyan">{{lang.yUp}}</span></th>
+                    <th md-column md-order-by="y_down"><span class="color-darkcyan">{{lang.yDown}}</span></th>
+                    <th md-column md-order-by="y_down"><span class="color-darkcyan">{{lang.color}}</span></th>
                     <th md-column></th>
                 </tr>
                 </thead>
@@ -46,24 +46,25 @@
                 <tr md-row md-select="tag" md-on-select="logItem" md-auto-select="true"
                     ng-repeat="zone in zones | orderBy: query.order | limitTo: query.limit: (query.page -1 ) * query.limit">
                     <td md-cell ng-click="editCell($event, zone, 'name')" ng-class="{'md-placeholder': !zone.name}">
-                        {{zone.name || 'Inserire nome'}}
+                        {{zone.name || lang.insertName}}
                     </td>
                     <td md-cell ng-click="editCell($event, zone, 'x_left')"
-                        ng-class="{'md-placeholder': !zone.x_left}">{{zone.x_left || 'Inserire valore'}}
+                        ng-class="{'md-placeholder': !zone.x_left}">{{zone.x_left || lang.insertValue}}
                     </td>
                     <td md-cell ng-click="editCell($event, zone, 'x_right')"
-                        ng-class="{'md-placeholder': !zone.x_right}">{{zone.x_right || 'Inserire valore'}}
+                        ng-class="{'md-placeholder': !zone.x_right}">{{zone.x_right || lang.insertValue}}
                     </td>
                     <td md-cell ng-click="editCell($event, zone, 'y_up')"
-                        ng-class="{'md-placeholder': !zone.y_up}">{{zone.y_up || 'Inserire valore'}}
+                        ng-class="{'md-placeholder': !zone.y_up}">{{zone.y_up || lang.insertValue}}
                     </td>
                     <td md-cell ng-click="editCell($event, zone, 'y_down')"
-                        ng-class="{'md-placeholder': !zone.y_down}">{{zone.y_down || 'Inserire valore'}}
+                        ng-class="{'md-placeholder': !zone.y_down}">{{zone.y_down || lang.insertValue}}
                     </td>
                     <td md-cell ng-click="editCell($event, zone, 'color')"
-                        ng-class="{'md-placeholder': !zone.color}">{{zone.color || 'Inserire valore'}}
+                        ng-class="{'md-placeholder': !zone.color}">{{zone.color || lang.insertColor}}
                     </td>
-                    <td md-cell ng-click="deleteRow(zone)"><img src="img/icons/delete_trash_24.png" alt="Cancella tag" title="Cancella tag"></td>
+                    <td md-cell ng-click="deleteRow(zone)"><img src="img/icons/delete_trash_24.png" alt="{{lang.deleteTag}}"
+                                                                title="{{lang.deleteTag}}"></td>
                 </tr>
                 </tbody>
             </table>
@@ -72,7 +73,7 @@
         <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
-                     ng-click="addNewRow()" alt="Aggiungi tag" title="Aggiungi tag">
+                     ng-click="addNewRow()" alt="{{lang.insertTag}}" title="{{lang.insertTag}}">
             </div>
         </md-input-container>
 
